--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SikkMixx Live01</title>
+  <title>SikkMixx Live02</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
@@ -250,7 +250,7 @@
   <div class="card">
     <h1>LIVE SET</h1>
     <div class="track-title" id="trackTitle">Loading...</div>
-    <audio id="player" controls crossorigin="anonymous"></audio>
+    <audio id="player"  crossorigin="anonymous"></audio>
 <div class="controls">
   <button id="prevBtn">⏮</button>
   <button id="playPauseBtn">⏯</button>
