--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SikkMixx Live03</title>
+  <title>SikkMixx Live04</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
@@ -346,12 +346,14 @@ function ensureAudioReady() {
 }
 
 
+
+  ensureAudioReady()
+
   if (player.paused) {
     player.play()
   } else {
     player.pause()
   }
-
 })
 
 })
