--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SikkMixx Live04</title>
+  <title>SikkMixx Live06</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
@@ -250,7 +250,7 @@
   <div class="card">
     <h1>LIVE SET</h1>
     <div class="track-title" id="trackTitle">Loading...</div>
-    <audio id="player"  crossorigin="anonymous"></audio>
+    <audio id="player" controls crossorigin="anonymous"></audio>
 <div class="controls">
   <button id="prevBtn">⏮</button>
   <button id="playPauseBtn">⏯</button>
@@ -307,15 +307,6 @@ function playCurrentTrack() {
   player.src = `${API}/file/${encoded}`
 }
 
-function ensureAudioReady() {
-  if (!audioContext) {
-    initVisualizer()
-  }
-
-  if (audioContext.state === "suspended") {
-    audioContext.resume()
-  }
-}
 
 
 
@@ -345,8 +336,6 @@ document.getElementById("prevBtn").addEventListener("click", () => {
 
 document.getElementById("playPauseBtn").addEventListener("click", () => {
 
-  ensureAudioReady()
-
   if (player.paused) {
     player.play()
   } else {
@@ -355,8 +344,15 @@ document.getElementById("playPauseBtn").addEventListener("click", () => {
 
 })
 
-
 })
+
+
+
+
+
+
+
+
 
 
 
