--- a/admin.html
+++ b/admin.html
@@ -39,17 +39,25 @@
       display: none;
     }
 
-    .track {
-      margin: 10px 0;
-      padding: 10px;
-      background: #1a1a1a;
-      border-radius: 6px;
-    }
+.track {
+  margin: 6px 0;          /* tighter spacing */
+  padding: 6px 10px;      /* smaller padding */
+  background: #141414;    /* slightly darker, cleaner */
+  border-radius: 4px;     /* smaller corners */
+  font-size: 14px;        /* slightly smaller text */
+  display: flex;          /* cleaner layout */
+  justify-content: space-between;
+  align-items: center;
+}
 
-    .track button {
-      width: auto;
-      margin-left: 10px;
-    }
+
+.track button {
+  padding: 4px 8px;
+  font-size: 12px;
+  margin-left: 8px;
+}
+
+
   </style>
 </head>
 
