--- a/index.html
+++ b/index.html
@@ -226,6 +226,18 @@
   50% { height: 50px; }
 }
 
+#bg-image {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url("club1.jpg.webp") center center / cover no-repeat;
+  z-index: -2;
+  filter: brightness(0.4) contrast(1.1);
+}
+
+
   </style>
 <!---------------------------------END   STYLE -->
 
@@ -235,6 +247,9 @@
 
 <a href="/register.html" id="registerBtn">Register</a>
 <a href="/admin.html" id="adminBtn">Admin</a>
+
+<div id="bg-image"></div>
+
 
 <div id="visual-bg"></div>
 
