--- a/index.html
+++ b/index.html
@@ -140,16 +140,17 @@
   transition: opacity 1s ease;
 }
 
-    .card {
-      background: rgba(255,255,255,0.05);
-      backdrop-filter: blur(15px);
-      border-radius: 20px;
-      padding: 40px;
-      text-align: center;
-      width: 90%;
-      max-width: 500px;
-      box-shadow: 0 0 40px rgba(255,0,204,0.3);
-    }
+.card {
+  background: rgba(20, 20, 20, 0.45);  /* transparency */
+  backdrop-filter: blur(18px);
+  -webkit-backdrop-filter: blur(18px);
+  border: 1px solid rgba(255,255,255,0.1);
+  border-radius: 16px;
+  box-shadow:
+    0 10px 40px rgba(0,0,0,0.6),
+    0 0 30px rgba(255,0,200,0.08);
+}
+
 
     h1 {
       letter-spacing: 3px;
