--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SikkMixx Live2</title>
+  <title>SikkMixx Live3</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
@@ -140,16 +140,17 @@
   transition: opacity 1s ease;
 }
 
-.card {
+    .card {
   background: rgba(20, 20, 20, 0.45);  /* transparency */
   backdrop-filter: blur(18px);
   -webkit-backdrop-filter: blur(18px);
-  border: 1px solid rgba(255,255,255,0.1);
-  border-radius: 16px;
-  box-shadow:
-    0 10px 40px rgba(0,0,0,0.6),
-    0 0 30px rgba(255,0,200,0.08);
-}
+      border-radius: 20px;
+      padding: 40px;
+      text-align: center;
+      width: 90%;
+      max-width: 500px;
+      box-shadow: 0 0 40px rgba(255,0,204,0.3);
+    }
 
 
     h1 {
