--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SikkMixx Live3</title>
+  <title>SikkMixx Live4</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
@@ -141,7 +141,7 @@
 }
 
     .card {
-  background: rgba(20, 20, 20, 0.45);  /* transparency */
+background: rgba(20, 20, 20, 0.3);
   backdrop-filter: blur(18px);
   -webkit-backdrop-filter: blur(18px);
       border-radius: 20px;
