--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SikkMixx Live6</title>
+  <title>SikkMixx Live7</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
@@ -140,10 +140,21 @@
   transition: opacity 1s ease;
 }
 
-.card {
-  background: rgba(255, 0, 0, 0.3);
-}
 
+
+    .card {
+background: rgba(40, 40, 40, 0.45);
+
+  backdrop-filter: blur(20px);
+      border-radius: 20px;
+border: 1px solid rgba(255,255,255,0.08);
+
+      padding: 40px;
+      text-align: center;
+      width: 90%;
+      max-width: 500px;
+      box-shadow: 0 0 40px rgba(255,0,204,0.3);
+    }
 
 
     h1 {
