--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SikkMixx Live9</title>
+  <title>SikkMixx Live1</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
@@ -136,6 +136,8 @@
   align-items: center;
   height: 100vh;
   background: transparent;   /* 🔥 important */
+  opacity: 0.5;
+//  transition: opacity 1s ease;
 }
 
 
