--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SikkMixx Live1</title>
+  <title>SikkMixx Live2</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
@@ -136,8 +136,7 @@
   align-items: center;
   height: 100vh;
   background: transparent;   /* 🔥 important */
-  opacity: 0.5;
-//  transition: opacity 1s ease;
+
 }
 
 
@@ -152,6 +151,12 @@ border: 1px solid rgba(255,255,255,0.1);
       width: 90%;
       max-width: 500px;
       box-shadow: 0 0 40px rgba(255,0,204,0.3);
+	  
+	    opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.8s ease, transform 0.8s ease;
+}
+	  
     }
 
 
