--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ border: 1px solid rgba(255,255,255,0.1);
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("club1.jpg.webp") center center / cover no-repeat;
+  background: url("club2.avif") center center / cover no-repeat;
   z-index: -2;
   filter: brightness(0.8) contrast(1.4);
 }
