--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SikkMixx Live6</title>
+  <title>SikkMixx</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
@@ -241,7 +241,7 @@ border: 1px solid rgba(255,255,255,0.1);
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("club2.avif") center center / cover no-repeat;
+  background: url("omnia.webp") center center / cover no-repeat;
   z-index: -2;
   filter: brightness(0.8) contrast(1.4);
 }
