--- a/index.html
+++ b/index.html
@@ -139,6 +139,29 @@
 
 }
 
+.submit-fab {
+  position: fixed;
+  bottom: 25px;
+  right: 25px;
+  padding: 14px 20px;
+  border-radius: 30px;
+  background: rgba(255, 0, 200, 0.15);
+  backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 0, 200, 0.4);
+  color: white;
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: 600;
+  box-shadow: 0 0 20px rgba(255, 0, 200, 0.4);
+  transition: all 0.2s ease;
+  z-index: 1000;
+}
+
+.submit-fab:hover {
+  background: rgba(255, 0, 200, 0.3);
+  box-shadow: 0 0 35px rgba(255, 0, 200, 0.8);
+  transform: translateY(-3px);
+}
 
 
     .card {
@@ -502,6 +525,9 @@ for (let i = 0; i < bars; i++) {
 
 
 </script>
+<a href="/submit.html" class="submit-fab">
+  + Submit Track
+</a>
 
 </body>
 </html>
