--- a/index.html
+++ b/index.html
@@ -139,29 +139,30 @@
 
 }
 
+
 .submit-fab {
   position: fixed;
-  bottom: 25px;
-  right: 25px;
-  padding: 14px 20px;
-  border-radius: 30px;
-  background: rgba(255, 0, 200, 0.15);
-  backdrop-filter: blur(10px);
-  border: 1px solid rgba(255, 0, 200, 0.4);
-  color: white;
-  text-decoration: none;
+  top: 15px;
+  right: 20px;
+  opacity: 0.5;
   font-size: 14px;
-  font-weight: 600;
-  box-shadow: 0 0 20px rgba(255, 0, 200, 0.4);
-  transition: all 0.2s ease;
-  z-index: 1000;
+  text-decoration: none;
+  color: rgba(255,255,255,0.6);
+  border: 1px solid rgba(255,255,255,0.3);
+  padding: 6px 12px;
+  border-radius: 20px;
+  backdrop-filter: blur(6px);
+  transition: all 0.3s ease;
+  z-index: 20;
 }
 
 .submit-fab:hover {
-  background: rgba(255, 0, 200, 0.3);
-  box-shadow: 0 0 35px rgba(255, 0, 200, 0.8);
-  transform: translateY(-3px);
+  color: #ff00cc;
+  opacity: 1;
+  border-color: #ff00cc;
+  box-shadow: 0 0 10px #ff00cc;
 }
+
 
 
     .card {
@@ -526,7 +527,7 @@ for (let i = 0; i < bars; i++) {
 
 </script>
 <a href="/submit.html" class="submit-fab">
-  + Submit Track
+  + Submit
 </a>
 
 </body>
