--- a/index.html
+++ b/index.html
@@ -282,8 +282,6 @@ border: 1px solid rgba(255,255,255,0.1);
 <a href="/admin.html" id="adminBtn">Admin</a>
 
 <div id="bg-image"></div>
-
-
 <div id="visual-bg"></div>
 
 
@@ -528,6 +526,11 @@ for (let i = 0; i < bars; i++) {
 </script>
 <a href="/submit.html" class="submit-fab">
   + Submit
+  
+  
+  <a href="/admin.html" id="adminBtn">Admin</a>
+  
+  
 </a>
 
 </body>
