--- a/index.html
+++ b/index.html
@@ -524,12 +524,11 @@ for (let i = 0; i < bars; i++) {
 
 
 </script>
-<a href="/submit.html" class="submit-fab">
+<a href="/upload.html" class="submit-fab">
   + Submit
   
   
-  <a href="/admin.html" id="adminBtn">Admin</a>
-  
+
   
 </a>
 
