--- a/upload.html
+++ b/upload.html
@@ -87,7 +87,7 @@
       statusDiv.textContent = "Uploading...";
 
       try {
-        const response = await fetch("/upload", {
+      const response = await fetch("https://api.sikkmixx.com/upload", {
           method: "POST",
           body: formData
         });
