--- a/upload.html
+++ b/upload.html
@@ -78,6 +78,7 @@
   <script>
     const form = document.getElementById("uploadForm");
     const statusDiv = document.getElementById("status");
+	const token = localStorage.getItem("token");
 
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
@@ -87,10 +88,13 @@
       statusDiv.textContent = "Uploading...";
 
       try {
-      const response = await fetch("https://api.sikkmixx.com/upload", {
-          method: "POST",
-          body: formData
-        });
+     const response = await fetch("https://api.sikkmixx.com/upload", {
+  method: "POST",
+  body: formData,
+  headers: {
+    "Authorization": `Bearer ${token}`
+  }
+});
 
         const text = await response.text();
 
