--- a/upload.html
+++ b/upload.html
@@ -80,38 +80,35 @@
     const statusDiv = document.getElementById("status");
 	const token = localStorage.getItem("token");
 
-    form.addEventListener("submit", async (e) => {
-      e.preventDefault();
+form.addEventListener("submit", async (e) => {
+  e.preventDefault();
+  const formData = new FormData(form);
+  const token = localStorage.getItem("token");
+  statusDiv.textContent = "Uploading...";
 
-      const formData = new FormData(form);
-
-      statusDiv.textContent = "Uploading...";
-
-      try {
-     const response = await fetch("https://api.sikkmixx.com/upload", {
-  method: "POST",
-  body: formData,
-  headers: {
-    "Authorization": `Bearer ${token}`
-  }
-});
-
-        const text = await response.text();
-
- if (response.ok) {
-  const data = await response.json();
-  statusDiv.textContent = "✅ Upload successful!";
-  form.reset();
-} else {
-  const text = await response.text();
-  statusDiv.textContent = "❌ Error: " + text;
-}
-
-
-      } catch (err) {
-        statusDiv.textContent = "❌ Upload failed.";
+  try {
+    const response = await fetch("https://api.sikkmixx.com/upload", {
+      method: "POST",
+      body: formData,
+      headers: {
+        "Authorization": `Bearer ${token}`
       }
     });
+
+    if (response.ok) {
+      const data = await response.json(); // parse JSON safely
+      statusDiv.textContent = "✅ Upload successful!";
+      form.reset();
+    } else {
+      const text = await response.text();
+      statusDiv.textContent = "❌ Error: " + text;
+    }
+
+  } catch (err) {
+    statusDiv.textContent = "❌ Upload failed. " + err.message;
+  }
+});
+	
   </script>
 </body>
 </html>
