--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ border: 1px solid rgba(255,255,255,0.1);
 <body>
 
 <a href="/register.html" id="registerBtn">Register</a>
-<a href="/admin.html" id="adminBtn">Admin</a>
+<a href="/login.html" id="adminBtn">Login</a>
 
 <div id="bg-image"></div>
 <div id="visual-bg"></div>
