--- a/index.html
+++ b/index.html
@@ -329,6 +329,11 @@ border: 1px solid rgba(255,255,255,0.1);
 <a href="/my.html" id="myBtn" style="display:none;">My Tracks</a>
 <a href="/profile.html" id="profileBtn" style="display:none;">@user</a>
 
+<a href="/my.html" id="myBtn" >My Tracks</a>
+<a href="/profile.html" id="profileBtn" >@user</a>
+
+
+
 
 <div id="bg-image"></div>
 <div id="visual-bg"></div>
