--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SikkMixx</title>
+  <title>SikkMixx2</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
@@ -329,8 +329,8 @@ border: 1px solid rgba(255,255,255,0.1);
 <a href="/my.html" id="myBtn" style="display:none;">My Tracks</a>
 <a href="/profile.html" id="profileBtn" style="display:none;">@user</a>
 
-<a href="/my.html" id="myBtn" >My Tracks</a>
-<a href="/profile.html" id="profileBtn" >@user</a>
+//<a href="/my.html" id="myBtn" >My Tracks</a>
+//<a href="/profile.html" id="profileBtn" >@user</a>
 
 
 
