--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SikkMixx2</title>
+  <title>SikkMixx3</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
@@ -37,7 +37,7 @@
 
 #profileBtn {
   position: fixed;
-  top: 25px;
+  top: 70px;
   left: 40px; /* adjust if it overlaps */
 }
 
@@ -48,12 +48,15 @@
   box-shadow: 0 0 10px #ff00cc;
 }
 
-#loginBtn    { right: 20px; }
+#loginBtn    { 
+  position: fixed;
+  top: 70px;
+right: 20px; }
 
 #registerBtn {
   position: fixed;
-  top: 15px;
-  left: 20px;
+  top: 50px;
+  left: 40px;
 }
 
 #registerBtn:hover {
