--- a/index.html
+++ b/index.html
@@ -29,6 +29,29 @@
       transition: opacity 1s ease;
     }
 
+.header-btn {
+  position: fixed;
+  top: 15px;
+  opacity: 0.5;
+  font-size: 14px;
+  text-decoration: none;
+  color: rgba(255,255,255,0.6);
+  border: 1px solid rgba(255,255,255,0.3);
+  padding: 6px 12px;
+  border-radius: 20px;
+  backdrop-filter: blur(6px);
+  transition: all 0.3s ease;
+  z-index: 20;
+}
+
+.header-btn:hover {
+  color: #ff00cc;
+  opacity: 1;
+  border-color: #ff00cc;
+  box-shadow: 0 0 10px #ff00cc;
+}
+
+
 #visualizer {
   margin-top: 30px;
   width: 100%;
