--- a/index.html
+++ b/index.html
@@ -372,6 +372,9 @@ const profileBtn = document.getElementById("profileBtn");
     registerBtn.style.display = "none";
 
     // Change Login → Logout
+	loginBtn.style.borderColor = "rgba(255,80,80,0.6)";
+loginBtn.style.color = "rgba(255,180,180,0.9)";
+
     loginBtn.textContent = "Logout";
     loginBtn.href = "#";
 
