--- a/logo.html
+++ b/logo.html
@@ -3,17 +3,16 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>siKKmiXX animated logo</title>
+  <title>siKKmiXX spinning overlap logo</title>
   <style>
     :root{
-      --bg: #000;
-      --glass: rgba(30,30,30,.45);
+      --bg:#000;
       --stroke: rgba(255,255,255,.12);
-      --pink: #ff00cc;
-      --blue: #3333ff;
-      --cyan: #00e0ff;
-      --glow: 0 0 10px rgba(255,0,204,.65), 0 0 22px rgba(255,0,204,.35);
-      --glow2: 0 0 10px rgba(0,224,255,.55), 0 0 22px rgba(0,224,255,.28);
+      --pink:#ff00cc;
+      --blue:#3333ff;
+      --cyan:#00e0ff;
+      --glowPink: 0 0 10px rgba(255,0,204,.75), 0 0 22px rgba(255,0,204,.35);
+      --glowCyan: 0 0 10px rgba(0,224,255,.60), 0 0 22px rgba(0,224,255,.28);
     }
 
     body{
@@ -23,17 +22,16 @@
       place-items:center;
       background: var(--bg);
       color:#fff;
-      font-family: "Segoe UI", system-ui, -apple-system, Arial, sans-serif;
+      font-family:"Segoe UI", system-ui, -apple-system, Arial, sans-serif;
     }
 
-    /* ---------- LOGO CONTAINER ---------- */
     #sikkmixx-logo{
-      position: relative;
-      width: min(520px, 92vw);
-      aspect-ratio: 3 / 1.2;
-      display: grid;
-      place-items: center;
-      user-select: none;
+      position:relative;
+      width:min(640px, 94vw);
+      aspect-ratio: 3 / 1.35;
+      display:grid;
+      place-items:center;
+      user-select:none;
     }
 
     .deck{
@@ -42,41 +40,43 @@
       display:flex;
       align-items:center;
       justify-content:center;
+      /* MORE overlap so KK/XX can collide in the middle */
       gap: 0;
     }
 
-    /* Two “records” that overlap slightly */
     .disc{
-      position: relative;
-      width: 44%;
-      aspect-ratio: 1 / 1;
-      border-radius: 999px;
-      background: radial-gradient(circle at 30% 25%, rgba(255,255,255,.12), transparent 52%),
-                  radial-gradient(circle at 70% 70%, rgba(0,224,255,.10), transparent 55%),
-                  rgba(20,20,20,.55);
-      border: 1px solid var(--stroke);
+      position:relative;
+      width: 46%;
+      aspect-ratio:1/1;
+      border-radius:999px;
+      border:1px solid var(--stroke);
+      background:
+        radial-gradient(circle at 30% 25%, rgba(255,255,255,.14), transparent 52%),
+        radial-gradient(circle at 70% 70%, rgba(0,224,255,.10), transparent 55%),
+        rgba(18,18,18,.55);
       backdrop-filter: blur(14px);
-      box-shadow: 0 0 40px rgba(255,0,204,.18);
+      box-shadow: 0 0 45px rgba(255,0,204,.16);
       display:grid;
       place-items:center;
-      overflow:hidden;
+      overflow: visible; /* IMPORTANT: let KK/XX spill outside the disc */
     }
 
-    /* subtle grooves */
+    /* grooves */
     .disc::before{
       content:"";
       position:absolute;
-      inset:-10%;
+      inset:-12%;
       border-radius:999px;
       background:
         repeating-radial-gradient(circle,
           rgba(255,255,255,.08) 0 1px,
           rgba(0,0,0,0) 1px 7px);
       opacity:.22;
+      pointer-events:none;
       filter: blur(.2px);
     }
 
-    /* center label dot */
+    /* label dot */
     .disc::after{
       content:"";
       position:absolute;
@@ -85,94 +85,105 @@
       border-radius:999px;
       background: radial-gradient(circle, rgba(255,255,255,.9), rgba(255,255,255,.2));
       opacity:.22;
+      pointer-events:none;
     }
 
-    /* Overlap the two discs a bit */
-    .disc.left{ transform: translateX(8%); }
-    .disc.right{ transform: translateX(-8%); }
+    /* Pull discs INTO each other */
+    .disc.left  { transform: translateX(14%); z-index: 2; }
+    .disc.right { transform: translateX(-14%); z-index: 1; }
 
-    /* The rotating word layer */
+    /* Rotating layer */
     .spin{
-      position: relative;
-      width: 86%;
-      aspect-ratio: 1 / 1;
-      display:grid;
-      place-items:center;
+      position:relative;
+      width: 100%;
+      height: 100%;
       transform-origin: 50% 50%;
       will-change: transform;
-      z-index:2;
+      display:grid;
+      place-items:center;
+      z-index: 5;
+      pointer-events:none;
     }
 
-    .word{
+    /* Base (si / mi) stays centered on the disc and rotates with it */
+    .base{
       font-weight: 800;
       letter-spacing: 1px;
-      font-size: clamp(28px, 5.4vw, 52px);
-      line-height: 1;
-      text-transform: none;
-      filter: drop-shadow(0 0 10px rgba(0,0,0,.6));
-      display:flex;
-      align-items:baseline;
-      gap: 2px;
-    }
-
-    .word .soft{
-      opacity:.92;
+      font-size: clamp(22px, 4.2vw, 44px);
+      opacity: .92;
       color: rgba(255,255,255,.88);
       text-shadow: 0 0 12px rgba(255,255,255,.12);
+      filter: drop-shadow(0 0 10px rgba(0,0,0,.6));
     }
 
-    .word .hot{
+    /* The big “rim letters” KK / XX that spill OUTSIDE the record */
+    .rim{
+      position:absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-weight: 900;
+      letter-spacing: 1px;
+      font-size: clamp(56px, 10.5vw, 118px); /* BIG */
+      line-height: 1;
       background: linear-gradient(90deg, var(--pink), var(--blue));
       -webkit-background-clip: text;
       background-clip: text;
       color: transparent;
-      text-shadow: var(--glow);
-      position: relative;
+      text-shadow: var(--glowPink);
+      filter: drop-shadow(0 0 14px rgba(255,0,204,.35));
+      will-change: transform, filter;
     }
 
-    /* Flash effect on KK / XX when overlap moment happens */
-    .flash .hot{
+    /*
+      Place them on the inner rim toward the overlap.
+      - left disc’s KK sits on RIGHT rim (positive x)
+      - right disc’s XX sits on LEFT rim (negative x)
+      Also “spill” outward by going beyond radius.
+    */
+    .disc.left .rim  { transform: translate(-50%, -50%) translateX(55%) translateY(-2%); }
+    .disc.right .rim { transform: translate(-50%, -50%) translateX(-55%) translateY(-2%); }
+
+    /* Flash when alignment happens */
+    .flash{
       animation: flashPop 220ms ease-out 1;
-    }
-
-    .flashSpark{
-      position:absolute;
-      left: 50%;
-      top: 50%;
-      width: 22%;
-      aspect-ratio:1/1;
-      transform: translate(-50%,-50%);
-      border-radius: 999px;
-      background: radial-gradient(circle, rgba(255,0,204,.95), rgba(0,224,255,.35), transparent 70%);
-      opacity: 0;
-      filter: blur(.2px);
-      pointer-events:none;
-      z-index: 5;
-    }
-
-    .sparkOn{
-      opacity: 1;
-      animation: spark 220ms ease-out 1;
     }
 
     @keyframes flashPop{
       0%   { filter: drop-shadow(0 0 0 rgba(255,0,204,0)); transform: scale(1); }
-      40%  { filter: drop-shadow(0 0 18px rgba(255,0,204,.9)); transform: scale(1.10); }
+      35%  { filter: drop-shadow(0 0 26px rgba(0,224,255,.85)) drop-shadow(0 0 18px rgba(255,0,204,.85)); transform: scale(1.08); }
       100% { filter: drop-shadow(0 0 0 rgba(255,0,204,0)); transform: scale(1); }
     }
 
-    @keyframes spark{
-      0%   { transform: translate(-50%,-50%) scale(.75); opacity:0; }
-      35%  { transform: translate(-50%,-50%) scale(1.05); opacity:1; }
-      100% { transform: translate(-50%,-50%) scale(1.45); opacity:0; }
+    /* center overlap spark */
+    .spark{
+      position:absolute;
+      left:50%;
+      top:50%;
+      width: 16%;
+      aspect-ratio:1/1;
+      transform: translate(-50%, -50%);
+      border-radius:999px;
+      background: radial-gradient(circle, rgba(255,0,204,.95), rgba(0,224,255,.40), transparent 70%);
+      opacity:0;
+      pointer-events:none;
+      z-index: 50;
     }
 
-    /* Optional: pause / play indicator hook */
-    .paused .spin{ filter: saturate(.9) brightness(.95); }
+    .sparkOn{
+      opacity:1;
+      animation: spark 220ms ease-out 1;
+    }
 
-    /* Respect reduced motion */
+    @keyframes spark{
+      0%   { transform: translate(-50%, -50%) scale(.70); opacity:0; }
+      35%  { transform: translate(-50%, -50%) scale(1.05); opacity:1; }
+      100% { transform: translate(-50%, -50%) scale(1.55); opacity:0; }
+    }
+
+    /* Reduced motion */
     @media (prefers-reduced-motion: reduce){
-      .spin{ transform: none !important; }
+      .spin{ transform:none !important; }
     }
   </style>
 </head>
@@ -181,104 +192,91 @@
 
 <div id="sikkmixx-logo" aria-label="siKKmiXX logo">
   <div class="deck">
-    <!-- left disc: siKK (counterclockwise) -->
     <div class="disc left">
       <div class="spin" id="spinLeft">
-        <div class="word" id="wordLeft">
-          <span class="soft">si</span><span class="hot">KK</span>
-        </div>
+        <div class="base">si</div>
+        <div class="rim" id="rimKK">KK</div>
       </div>
     </div>
 
-    <!-- right disc: miXX (clockwise) -->
     <div class="disc right">
       <div class="spin" id="spinRight">
-        <div class="word" id="wordRight">
-          <span class="soft">mi</span><span class="hot">XX</span>
-        </div>
+        <div class="base">mi</div>
+        <div class="rim" id="rimXX">XX</div>
       </div>
     </div>
 
-    <!-- shared overlap spark -->
-    <div class="flashSpark" id="spark"></div>
+    <div class="spark" id="spark"></div>
   </div>
 </div>
 
 <script>
-  // ---- Tunables ----
-  const SPEED_DEG_PER_SEC = 42;     // base spin speed
-  const FLASH_THRESHOLD_DEG = 7;    // how close alignment must be to flash
-  const FLASH_COOLDOWN_MS = 260;    // prevents constant flashing
+  // --- Tunables ---
+  const SPEED_DEG_PER_SEC = 44;     // spin speed
+  const FLASH_THRESHOLD_DEG = 6;    // how close the match must be
+  const FLASH_COOLDOWN_MS = 260;    // avoids constant flashing
 
-  // Hook this to your audio play state later:
-  let isPlaying = true;             // set false to pause spinning
+  // later: hook this to your audio element play/pause
+  let isPlaying = true;
 
   const spinLeft  = document.getElementById("spinLeft");
   const spinRight = document.getElementById("spinRight");
-  const wordLeft  = document.getElementById("wordLeft");
-  const wordRight = document.getElementById("wordRight");
-  const spark     = document.getElementById("spark");
-  const logo      = document.getElementById("sikkmixx-logo");
+  const rimKK = document.getElementById("rimKK");
+  const rimXX = document.getElementById("rimXX");
+  const spark = document.getElementById("spark");
+  const logo  = document.getElementById("sikkmixx-logo");
 
   let lastFlashAt = 0;
+  const t0 = performance.now();
 
   function normDeg(d){
-    // normalize to [0, 360)
     d = d % 360;
     return d < 0 ? d + 360 : d;
   }
 
   function shortestAngleDiff(a, b){
-    // smallest difference between two angles in degrees
     let diff = Math.abs(normDeg(a) - normDeg(b));
     return diff > 180 ? 360 - diff : diff;
   }
 
   function triggerFlash(){
-    wordLeft.classList.add("flash");
-    wordRight.classList.add("flash");
+    rimKK.classList.add("flash");
+    rimXX.classList.add("flash");
     spark.classList.add("sparkOn");
 
-    // cleanup
     setTimeout(() => {
-      wordLeft.classList.remove("flash");
-      wordRight.classList.remove("flash");
+      rimKK.classList.remove("flash");
+      rimXX.classList.remove("flash");
       spark.classList.remove("sparkOn");
     }, 240);
   }
 
-  // Animation loop so we can compute alignment precisely
-  const t0 = performance.now();
   function tick(now){
     const dt = (now - t0) / 1000;
 
-    if (isPlaying && !window.matchMedia("(prefers-reduced-motion: reduce)").matches){
-      // clockwise on right, counterclockwise on left
-      const aRight =  normDeg(dt * SPEED_DEG_PER_SEC);
-      const aLeft  =  normDeg(-dt * SPEED_DEG_PER_SEC);
+    if (isPlaying && !matchMedia("(prefers-reduced-motion: reduce)").matches){
+      // right disc clockwise, left disc counterclockwise
+      const aRight = normDeg(dt * SPEED_DEG_PER_SEC);
+      const aLeft  = normDeg(-dt * SPEED_DEG_PER_SEC);
 
       spinRight.style.transform = `rotate(${aRight}deg)`;
       spinLeft.style.transform  = `rotate(${aLeft}deg)`;
 
-      // flash when the two spins "line up" (relative angle near 0)
+      // “Match up” moment: relative angle near 0°
       const relative = shortestAngleDiff(aRight, aLeft);
 
       const nowMs = performance.now();
-      if (relative <= FLASH_THRESHOLD_DEG && (nowMs - lastFlashAt) > FLASH_COOLDOWN_MS){
+      if (relative <= FLASH_THRESHOLD_DEG && (nowMs - lastFlashAt) > FLASH_COOLDOWN_MS) {
         lastFlashAt = nowMs;
         triggerFlash();
       }
-
-      logo.classList.remove("paused");
-    } else {
-      logo.classList.add("paused");
     }
 
     requestAnimationFrame(tick);
   }
   requestAnimationFrame(tick);
 
-  // OPTIONAL: quick demo toggle on click (replace with your audio events later)
+  // demo toggle (click logo to pause/play)
   logo.addEventListener("click", () => { isPlaying = !isPlaying; });
 </script>
 
